# PrivLLM-Q

./: .gitmodules  README.md
GPU-MatMul/: .gitignore  CMakeLists.txt  README.md
GPU-MatMul/Datatype/: CMakeLists.txt
GPU-MatMul/Datatype/include/Datatype/: Tensor.h  UnifiedType.h
GPU-MatMul/Datatype/src/: main.cpp
GPU-MatMul/HE/: CMakeLists.txt
GPU-MatMul/HE/include/HE/unified/: PhantomWrapper.h  UnifiedCiphertext.h  UnifiedContext.h  UnifiedEncoder.h  UnifiedEvaluator.h  UnifiedEvk.h  UnifiedPlaintext.h
GPU-MatMul/HE/src/: PhantomWrapper.cpp  UnifiedEvaluator.cpp
GPU-MatMul/fastFFN/: CMakeLists.txt  ffn_less_ntt.cpp  ffn_less_ntt_lazy_reduction.cpp  ffn_less_ntt_nobsgs.cpp  ffn_ntt_pmult.cpp  ffn_utils.cpp  ffn_utils.h
GPU-MatMul/fastFFN/common/: matrix_validator.cpp  matrix_validator.h  memory_monitor.cpp  memory_monitor.h  profile_helper.cpp  profile_helper.h  thread_pool.cpp  thread_pool.h  utils.cpp  utils.h
GPU-MatMul/scripts/: build.sh  run_perf_tests.sh
GPU-MatMul/scripts/helper/: run_ffn_workload.sh
Quantization/: .gitignore  README.md  check_overflow.py  check_overflow.sh  eval.py  eval.sh  llama2.txt  llama3.txt  main.py  requirements.txt  test.py  train.sh
Quantization/protocol/: .gitignore  .gitmodules  CMakeLists.txt  README.md  throttle.sh
Quantization/protocol/Datatype/: CMakeLists.txt
Quantization/protocol/Datatype/include/Datatype/: Tensor.h  UnifiedType.h
Quantization/protocol/Datatype/src/: test.cpp
Quantization/protocol/HE/: CMakeLists.txt
Quantization/protocol/HE/include/HE/: HE.h  NetIO.h
Quantization/protocol/HE/include/HE/unified/: PhantomWrapper.h  UnifiedContext.h  UnifiedEvaluator.h
Quantization/protocol/HE/src/: NetIO.cpp  PhantomWrapper.cpp  UnifiedEvaluator.cpp  UnifiedHE.cpp
Quantization/protocol/Layer/: CMakeLists.txt  Module.h
Quantization/protocol/Layer/LinearLayer/: CMakeLists.txt
Quantization/protocol/Layer/LinearLayer/include/LinearLayer/: Conv.h  Linear.h  MatCheetah.h
Quantization/protocol/Layer/LinearLayer/src/: CirConv.cpp  Conv.cpp  ConvCheetah.cpp  ConvNest.cpp  Linear.cpp
Quantization/protocol/Layer/NonlinearLayer/: CMakeLists.txt
Quantization/protocol/Layer/NonlinearLayer/include/NonlinearLayer/: GeLU.h  Pool.h  ReLU.h  SiLU.h
Quantization/protocol/Layer/NonlinearLayer/src/: ReLU.cpp
Quantization/protocol/OT/: CMakeLists.txt
Quantization/protocol/OT/OTPrimitive/: CMakeLists.txt
Quantization/protocol/OT/OTPrimitive/include/OTPrimitive/: cf2_ot_pack.h  cheetah_ot_pack.h  co.h  emp_ot.h  ideal.h  iknp.h  kkot.h  ot.h  ot_np.h  ot_pack.h  ot_primitive.h  ot_utils.h  silent_ot.h  split_iknp.h  split_kkot.h  split_utils.h
Quantization/protocol/OT/OTPrimitive/src/: OT.cpp
Quantization/protocol/OT/OTProtocol/: CMakeLists.txt
Quantization/protocol/OT/OTProtocol/include/OTProtocol/: aux-protocols.h  bit-triple-generator.h  equality.h  millionaire.h  millionaire_with_equality.h  protocol.h  truncation.h  value-extension.h
Quantization/protocol/OT/OTProtocol/src/: aux-protocols.cpp  comp.cpp  trunction.cpp
Quantization/protocol/Operator/: CMakeLists.txt
Quantization/protocol/Operator/LinearOperator/: CMakeLists.txt
Quantization/protocol/Operator/LinearOperator/include/LinearOperator/: Conversion.h  Polynomial.h
Quantization/protocol/Operator/LinearOperator/src/: Conversion.cpp  Polynomial.cpp
Quantization/protocol/Operator/NonlinearOperator/: CMakeLists.txt
Quantization/protocol/Operator/NonlinearOperator/include/NonlinearOperator/: Conversion.h  FixPoint.h
Quantization/protocol/Test/: CMakeLists.txt
Quantization/protocol/Test/src/: TestConv.cpp  TestFFN.cpp  TestFixPoint.cpp  TestGeLU.cpp  TestHEGPU.cpp  TestLinearOperator.cpp  TestMatmul.cpp  TestReLU.cpp  TestResBlock.cpp  TestResNet.cpp  TestSiLU.cpp  test_HE.cpp  test_Pool.cpp  test_tensor.cpp
Quantization/protocol/Utils/: CMakeLists.txt
Quantization/protocol/Utils/include/Utils/: ThreadPool.h  aes-ni.h  aes_opt.h  block.h  ccrf.h  constants.h  emp-tool.h  file_io_channel.h  group.h  group_openssl.h  hash.h  io_channel.h  mitccrh.h  net_io_channel.h  performance.h  prg.h  ubuntu_terminal_colors.h  utils.h
Quantization/protocol/Utils/src/: utils.cpp
Quantization/quantize/: block_ap.py  quantizer.py
Quantization/utils/: quant_utils.py  rotation_utils.py
